--- a/soundboard/template/index.html
+++ b/soundboard/template/index.html
@@ -1,12 +1,12 @@
 <html lang="en">
-	<head>
+	<head>        
   	<meta charset="UTF-8">
   <title>Sound Board</title>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header>      <!--added project version 2 SANCHIT SHARMA!-->
     <nav>
 
       	<a href="#" data-band="band1">Maroon 5</a>
